# mete-clustering

./: README.md  data.json  map.html  requirements.txt
backtraj/: 1.Download_ERA5.py  2.Compute_BT.py  3.Process_Data.py  file.py  merra2_parser.py  readnc.py  requirements.txt  test.py  test2.py
backtraj/back_raj/: computBT.py
backtraj/cache/: TrajGroup.npy  TrajGroups.npy  TrajGroupsList.npy
backtraj/src/: backtraj.py  merra2_parser.py  netcdf_parser.py
backtraj/utils/: readbin.py  readtxt.py
backtraj/utils/src/: clean.py
kernels/: dwt_cuda.cu
kernels/cpp/: CMakeLists.txt  README.md  bt_compute.cpp  bt_compute.h  dtw.cpp  dtw.h  dtw_distance_0.txt  era5_reader.cpp  era5_reader.h  features.cpp  features.h  http_handler.cpp  http_handler.h  main.cpp
kernels/cpp/test/bt_compute/: CMakeLists.txt  backtraj.py  bt_compute.cpp  bt_compute_nc.cpp  input.groovy
kernels/cpp/test/other/: compu.cpp  puto  puto.cpp  sse  sse.cpp  sse2  sse2.cpp  test.py  th  th.cpp  tmp.cpp
kernels/cpp/tmp/: example.json
kernels/python/: atom.py  atom_cutmat.py  client.py  cluster.py  compute_bt.py  era5parser.py
kernels/python/cache/: TrajGroup.npy  TrajGroup1.npy
res/json/: configuration.json
scripts/: down_era5.py
src/: cluster.py  hysplit.py  run.py
utils/: draw.py  readtxt.py  tractory.py
